--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,11 @@
 body {
   @apply m-0 box-border
 }
+
+#root {
+  @apply h-screen w-full bg-slate-100
+}
+
+.btn {
+  @apply bg-[#1b3d7d] rounded-full py-2 px-4 text-white
+}
