feat(countdown): created the countdown page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'digital';
+  src: url('../public/Assets/fonts/ds-digital/DS-DIGI.TTF');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
