--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,11 @@ body {
 .btn {
   @apply bg-[#1b3d7d] rounded-full py-2 px-4 text-white
 }
+
+.countdown_btn{
+  cursor:pointer;
+}
+
+.z_index_1{
+  z-index: -1;
+}
